manifests/apps/talos/jellyfin/jellyseerr.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  labels:
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 5055
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/instance: jellyseerr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  labels:
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
      app.kubernetes.io/instance: jellyseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyseerr
        app.kubernetes.io/instance: jellyseerr
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: jellyseerr
          image: "fallenbagel/jellyseerr:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 384Mi
            limits:
              memory: 768Mi
          volumeMounts:
            - name: config
              mountPath: /app/config
          livenessProbe:
            tcpSocket:
              port: 5055
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5055
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 5055
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  labels:
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-system
  hostnames:
  - "jellyseerr.bigli.io"
  rules:
  - backendRefs:
    - name: jellyseerr
      port: 5055
